force-app/main/default/objects/Voucher__c/fields/AwardType__c.field-meta.xml
<CustomField>
    <fullName>AwardType__c</fullName>
    <label>AwardType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>TimeProximity</fullName>
            </value>
            <value>
                <fullName>InstantWin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>