force-app/main/default/objects/Voucher__c/fields/Consumption_Channel__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Channel__c</fullName>
    <description
  >This field is for marketing cloud to determine which email type needs to be sent: DTC Code or Button with Hyperlink to URL (MdC).</description>
    <inlineHelpText
  >This field is for marketing cloud to determine which email type needs to be sent: DTC Code or Button with Hyperlink to URL (MdC).</inlineHelpText>
    <label>Consumption Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>DTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>