force-app/main/default/objects/Voucher__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Used by marketing cloud to determine if a voucher mail needs to be sent or the customer has printed the voucher on the website (MdC).</description>
    <inlineHelpText>Used by marketing cloud to determine if a voucher mail needs to be sent or the customer has printed the voucher on the website (MdC).</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>