force-app/main/default/objects/Voucher__c/fields/Offer_Id__c.field-meta.xml
<CustomField>
    <fullName>Offer_Id__c</fullName>
    <label>Offer Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>