force-app/main/default/objects/Voucher__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <label>Offer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>