force-app/main/default/objects/Voucher__c/fields/Prize__c.field-meta.xml
<CustomField>
    <fullName>Prize__c</fullName>
    <label>Prize</label>
    <length>255</length>
    <type>Text</type>
</CustomField>