force-app/main/default/objects/Voucher__c/fields/Redemption_Date__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Date__c</fullName>
    <label>Redemption Date</label>
    <type>DateTime</type>
</CustomField>