force-app/main/default/objects/Voucher__c/fields/Sent_In_Journey__c.field-meta.xml
<CustomField>
    <fullName>Sent_In_Journey__c</fullName>
    <label>Sent In Journey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>