force-app/main/default/objects/Voucher__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Gift</fullName>
            </value>
            <value>
                <fullName>Hidden Gift</fullName>
            </value>
            <value>
                <fullName>Item Percentage Off</fullName>
            </value>
            <value>
                <fullName>Item Target Price</fullName>
            </value>
            <value>
                <fullName>Item Value Off</fullName>
            </value>
            <value>
                <fullName>ItemPercentageOffDiscount</fullName>
            </value>
            <value>
                <fullName>Order Percentage Off</fullName>
            </value>
            <value>
                <fullName>Order Value Off</fullName>
            </value>
            <value>
                <fullName>OrderValueOffDiscount</fullName>
            </value>
            <value>
                <fullName>Shipping Percentage Off</fullName>
            </value>
            <value>
                <fullName>Shipping Target Price</fullName>
            </value>
            <value>
                <fullName>Shipping Value Off</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>