force-app/main/default/objects/Voucher__c/fields/URL_To_Voucher__c.field-meta.xml
<CustomField>
    <fullName>URL_To_Voucher__c</fullName>
    <description
  >URL to the HighCo Voucher. Only applicable for the HighCo Vouchers.</description>
    <inlineHelpText
  >URL to the HighCo Voucher. Only applicable for the HighCo Vouchers.</inlineHelpText>
    <label>URL To Voucher</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>