force-app/main/default/objects/Voucher__c/fields/Voucher_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Percentage__c</fullName>
    <formula>IF( CONTAINS( TEXT(Type__c)  , &apos;Percentage&apos;) , Value__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>