force-app/main/default/objects/Voucher__c/fields/Win_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Win_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Win Y/N</label>
    <type>Checkbox</type>
</CustomField>