force-app/main/default/objects/Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voucher_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Brand__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Send_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Maison du Café</value>
    </filters>
    <label>All</label>
</ListView>